--- a/style.css
+++ b/style.css
@@ -49,6 +49,12 @@
 
 .quote-section {
     background-color: var(--secondary-text-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 7.5% 17.5%;
+    margin: 5% 0%;
 }
 
 .quote-text {
@@ -56,6 +62,12 @@
     font-weight: var(--font-weight-light);
     font-style: italic;
     color: var(--dark-text-color);
+}
+
+.quote-section p {
+    align-self: flex-end;
+    font-size: 24px;
+    padding-right: 1%;
 }
 
 header {
@@ -102,7 +114,7 @@ header figure img:hover {
 article.hero {
     display: flex;
     justify-content: space-between;
-    padding: 5% 10% 7.5%;
+    padding: 4% 10% 7.5%;
 }
 
 article.hero section {
@@ -123,7 +135,8 @@ article.hero section a {
     width: fit-content;
 }
 
-article.hero section a:hover {
+article.hero section a:hover,
+aside.call-to-action a.cta-btn:hover {
     opacity: 80%;
 }
 
@@ -141,6 +154,10 @@ article.information {
     gap: 30px;
 }
 
+article.information h2 {
+    margin: 1%;
+}
+
 article.information section {
     display: flex;
     justify-content: center;
@@ -149,6 +166,7 @@ article.information section {
 
 article.information section figure {
     width: 15%;
+    transition: 1s;
 }
 
 article.information section figure img {
@@ -158,7 +176,43 @@ article.information section figure img {
     padding: 25px;
 }
 
+article.information section figure:hover {
+    transform: scale(1.1);
+    transition: 1s;
+}
+
 article.information section figure figcaption {
     color: #8f96a0;
     text-align: center;
+}
+
+aside.call-to-action {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 75%;
+    margin: 0 auto 5%;
+    border-radius: 10px;
+    padding: 3.5% 10%;
+}
+
+aside.call-to-action section p.hero-main-text {
+    font-size: 24px;
+    margin-bottom: 0.5%;
+}
+
+aside.call-to-action a.cta-btn {
+    border: solid 2px var(--main-text-color);
+    color: var(--main-text-color);
+    padding: 6px 30px;
+    border-radius: 10px;
+    width: fit-content;
+    text-decoration: none;
+    font-size: 20px;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    padding: 3.5%;
 }
